fixing overflow

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -612,8 +612,9 @@ pre tt:after {
   max-width: 1024px;
   padding: 40px 40px 100px;
   margin: auto;
-  overflow: auto;
+  overflow: scroll;
   text-align: center;
+  -webkit-overflow-scrolling: touch;
 }
 @media only screen and (max-width: 667px) {
   .contents {
